--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabrielly Mito</title>
+    <title>Gabrielly</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -11,6 +12,7 @@
     </header>
     <main>
         <p class="lema">Saia do esconderijo da vida e, ao invés de continuar no mesmo lema, busque dançar na chuva, recarregue os sonhos e esqueça as dores do passado.</p>
-    </main>
+        <p class="autor">desconhecido</p>
+     </main>
 </body>
 </html>
